Task-2: create Person class in php and display properties in webpage.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Input Form</h2>
-<form action="POST" method="post">
+<form action="person.php" method="post">
     <label for="name">Name:</label>
     <input type="text" name="name" id="name" required>
 
@@ -15,5 +15,6 @@
 
     <button type="submit">Save</button>
 </form>
+
 </body>
 </html>
