--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <label for="email">Email:</label>
     <input type="email" name="email" id="email" required>
 
-    <button type="submit">Save</button>
+    <button type="submit" name="submit">Save</button>
 </form>
 
 </body>
